*** empty log message ***
git-svn-id: http://svn.directwebremoting.org/trunk@189 3a8262b2-faa5-11dc-8610-ff947880b6b2